@@ -1212,6 +1212,7 @@ Demur Rumed
 Audun S. Runde
 Eran Rundstein
 Rauli Ruohonen
+Laura Rupprecht
 Jeff Rush
 Sam Rushing
 Mark Russell
