@@ -52,6 +52,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9858: Add missing method stubs to _io.RawIOBase.  Patch by Laura
+  Rupprecht.
+
 - Issue #22955: attrgetter, itemgetter and methodcaller objects in the operator
   module now support pickling.  Added readable and evaluable repr for these
   objects.  Based on patch by Josh Rosenberg.
